<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bring me food</string>
    <string name="label_on_screen"></string>
    <string name="scan">Scan</string>
    <string name="pose_fist">Drink</string>
    <string name="pose_wavein">Food</string>
    <string name="pose_waveout">Make a choice</string>
    <string name="pose_fingersspread">Make a choice</string>
    <string name="pose_rest">Rest</string>
    <string name="arm_left">Make a choice</string>
    <string name="arm_right">Make a choice</string>
    <string name="unlocked">Unlocked</string>
    <string name="locked">Locked</string>
    <string name="action_settings">Settings</string>
    <string name="enter_text">What is you table number ?</string>
    <string name="submit_table_number">Submit</string>
    <string name="tableTextLabel">Table number </string>

</resources>
