<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.thalmic.android.sample.helloworld.HelloWorldActivity"
    tools:ignore="MergeRootFrame">

    <TextView
        android:id="@+id/lock_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/locked"
        android:textSize="20dp"
        android:visibility="invisible"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/label_on_screen"
        android:textSize="40dp"
        tools:ignore="SpUsage"
        android:editable="false" />

    <EditText
        android:id="@+id/tableNumber"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="61dp"
        android:ems="10"
        android:hint="@string/enter_text"
        android:inputType="text" />

    <Button
        android:id="@+id/button"
        android:layout_width="113dp"
        android:layout_height="wrap_content"

        android:layout_below="@+id/text"
        android:layout_marginTop="180dp"
        android:text="@string/submit_table_number"
        android:layout_gravity="center_horizontal|top" />

    <TextView
        android:id="@+id/tableText"
        android:layout_width="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:text="@string/tableTextLabel"
        android:layout_marginTop="10dp"
        android:textSize="20dp"
        android:editable="false" />

</FrameLayout>
